--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -4,7 +4,7 @@ plugins {
     // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
     id "dev.flutter.flutter-gradle-plugin"
 }
-
+apply plugin: 'com.google.gms.google-services'
 android {
     namespace = "com.example.ddddd"
     compileSdk = flutter.compileSdkVersion
@@ -24,10 +24,11 @@ android {
         applicationId = "com.example.ddddd"
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
-        minSdk = flutter.minSdkVersion
-        targetSdk = flutter.targetSdkVersion
+        minSdk = 21
+        targetSdk = 28
         versionCode = flutter.versionCode
         versionName = flutter.versionName
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -41,4 +42,7 @@ android {
 
 flutter {
     source = "../.."
+}
+dependencies {
+  implementation 'com.android.support:multidex:1.0.3'
 }
