--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,11 @@ dependencies:
   google_maps_flutter: ^2.9.0
   flutter_screenutil: ^5.9.3
   get: ^4.6.6
+  firebase_core: ^3.5.0
+  uuid: ^4.5.0
+  cloud_firestore: ^5.4.2
+  shared_preferences: ^2.3.2
+  firebase_database: ^11.1.3
 
 dev_dependencies:
   flutter_test:
