--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   uuid: ^4.5.0
   shared_preferences: ^2.3.2
   firebase_database: ^11.1.3
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
